AX: Expose DOM ID and ClassList to AX APIs for automation and AT element hashes https://bugs.webkit.org/show_bug.cgi?id=120552

Unreviewed build fix.

* DumpRenderTree/win/AccessibilityUIElementWin.cpp:
(AccessibilityUIElement::classList):



Canonical link: https://commits.webkit.org/139027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155463 268f45cc-cd09-0410-ab3c-d52691b4dbfc