Tools/DumpRenderTree/win/AccessibilityUIElementWin.cpp
@@ -834,7 +834,7 @@ void AccessibilityUIElement::scrollToGlobalPoint(int x, int y)
     // FIXME: implement
 }
 
-JSStringRef AccessibilityUIElement::classList()
+JSStringRef AccessibilityUIElement::classList() const
 {
     // FIXME: implement
     return 0;
